fix: increase about me height to show texts that were overflow

--- a/styles/about-me.css
+++ b/styles/about-me.css
@@ -1,6 +1,6 @@
 html body #about-me
 {    
-    height: 100vh;
+    min-height: 100vh;
     margin-bottom: 100px;
 
     display: flex;
